--- a/blog-api/src/main/resources/application-dev.properties
+++ b/blog-api/src/main/resources/application-dev.properties
@@ -12,13 +12,12 @@ blog.cms=http://localhost:8080
 blog.view=http://localhost:8081
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/nblog?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT+8
+spring.datasource.url=jdbc:mysql://localhost:3306/nblog?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1234
 
-spring.redis.host=192.168.17.132
-spring.redis.password=123456
-spring.redis.port=6379
+spring.redis.host=121.4.49.238
+spring.redis.port=7000
 spring.redis.database=0
 spring.redis.timeout=10000ms
 
